--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   canvas.style.display = 'block';
               },
           });
-          qtLoader.loadEmscriptenModule("TypesetWidget");
+          qtLoader.loadEmscriptenModule("NebExample");
       }
     </script>
     <script type="text/javascript" src="qtloader.js"></script>
